# PallanguzhiGame

./: .gitmodules  README.md
Raylib-Pallanguzhi/: .Game.c.swp  .gitignore  Array.c  Array.h  Board.c  Board.h  EndScreen.c  EndScreen.h  Game  Game.c  Game.h  MainMenu.c  MainMenu.h  Makefile  Queue.c  Queue.h  Render.h  SlotSelector.c  SlotSelector.h  TextTestBuild.sh  Todo.txt  build_android.sh  build_android_1.sh  build_czmq_android.sh  gradle.properties  readLogs.sh
Raylib-Pallanguzhi/TestingCode/: TextTest.c
Raylib-Pallanguzhi/app/: build.gradle
Raylib-Pallanguzhi/app/src/main/: AndroidManifest.xml  Makefile
Raylib-Pallanguzhi/app/src/main/cpp/: Array.c  Button.c  Button.h  CMakeLists.txt  Client.c  Client.h  EndScreen.c  EndScreen.h  Game.c  Game.h  LanguageSelection.c  MainMenu.c  MainMenu.h  SaveData.c  SaveData.h  SlotSelector.c  TamilText.c  TamilText.h  TextRender.h  Translation.c  Translation.h
Raylib-Pallanguzhi/app/src/main/java/com/pallanguzhi/game/: DisplayManager.java  NativeLoader.java  SoftKeyboard.java
Raylib-Pallanguzhi/src/: Board.c  Button.c  Button.h  EndScreen.c  EndScreen.h  Game.c  Game.h  LanguageEnum.c  LanguageEnum.h  LanguageSeleciton.c  LanguageSelection.c  LanguageSelection.h  LangugageSelection.h  MainMenu.c  MainMenu.h  Queue.c  Queue.h  SaveData.c  SaveData.h  TamilText.c  TamilText.h  TestText.c  TextData.h  TextRender.c  TextRender.h  TextTest.c  Translation.c  Translation.h
TestPallanguzhi/: Board.cs  Program.cs
ZeroMQServerAndClient/: .gitignore  Makefile  client.c  client1.c  server.c  server_lczmq_install_helper.txt
